modal bg z-index fix

--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -1338,6 +1338,7 @@ ul[data-orbit] li:first-child { display: block; }
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9;
     &.active {
     	//display: block;
     }
